--- a/payment/src/main/resources/static/index.html
+++ b/payment/src/main/resources/static/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <title>Welcome Krishna Donation</title>
 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <style>
         body {
             margin: 0;
-            height: 100vh;
+            min-height: 100vh;
             font-family: 'Segoe UI', sans-serif;
             background:
                 linear-gradient(rgba(0,0,0,0.35), rgba(0,0,0,0.35)),
@@ -15,29 +17,33 @@
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
-            background-attachment: fixed;
+
             display: flex;
             justify-content: center;
             align-items: center;
+            padding: 20px;
         }
 
+        /* MAIN CONTAINER */
         .container {
             background: white;
-            width: 360px;
-            padding: 30px;
+            width: 100%;
+            max-width: 380px;
+            padding: 28px 22px;
             border-radius: 20px;
             text-align: center;
             box-shadow: 0 20px 40px rgba(0,0,0,0.3);
             position: relative;
         }
 
+        /* PEACOCK ICON */
         .container::before {
             content: "🦚";
             position: absolute;
             top: -30px;
             left: 50%;
             transform: translateX(-50%);
-            font-size: 50px;
+            font-size: 48px;
             background: white;
             border-radius: 50%;
             padding: 10px;
@@ -46,35 +52,46 @@
         h1 {
             margin-top: 30px;
             color: #6a1b9a;
-            font-size: 26px;
+            font-size: 24px;
         }
 
         p {
             color: #444;
-            font-size: 16px;
-            margin: 15px 0;
+            font-size: 15px;
+            margin: 14px 0;
         }
 
-        input {
+        /* INPUT GROUP (CENTER FIX) */
+        .input-group {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
             width: 100%;
+        }
+
+        .input-group input {
+            width: 100%;
+            max-width: 300px;
             padding: 12px;
             margin: 8px 0;
             border-radius: 10px;
             border: 1px solid #ccc;
             font-size: 15px;
+            text-align: center;
         }
 
-        /* PAY NOW */
+        /* PAY NOW BUTTON */
         button {
             width: 100%;
-            padding: 15px;
-            font-size: 18px;
+            padding: 14px;
+            font-size: 17px;
             border: none;
             border-radius: 30px;
             cursor: pointer;
             background: linear-gradient(135deg, #43cea2, #185a9d);
             color: white;
             transition: transform 0.25s ease, box-shadow 0.25s ease;
+            margin-top: 10px;
         }
 
         button:hover {
@@ -82,13 +99,13 @@
             box-shadow: 0 12px 22px rgba(0,0,0,0.25);
         }
 
-        /* DONATE WITH LOVE (hover added) */
+        /* ABOUT US */
         .amount-box {
             background: linear-gradient(135deg, #ffcc80, #ffe0b2);
-            padding: 15px;
+            padding: 14px;
             border-radius: 12px;
             margin: 15px 0;
-            font-size: 18px;
+            font-size: 17px;
             font-weight: bold;
             color: #e65100;
             cursor: pointer;
@@ -101,20 +118,20 @@
         }
 
         footer {
-            margin-top: 20px;
+            margin-top: 18px;
             font-size: 13px;
             color: #777;
         }
 
-        /* DONORS (hover added) */
+        /* DONOR BUTTON */
         .donor-btn {
             display: inline-block;
             margin-left: 6px;
-            padding: 6px 16px;
+            padding: 6px 14px;
             background: linear-gradient(135deg, #ff512f, #dd2476);
             color: #fff;
             border-radius: 20px;
-            font-size: 14px;
+            font-size: 13px;
             font-weight: bold;
             cursor: pointer;
             transition: transform 0.25s ease, box-shadow 0.25s ease;
@@ -125,11 +142,11 @@
             box-shadow: 0 8px 16px rgba(221,36,118,0.5);
         }
 
-        /* ADMIN PANEL (hover added) */
+        /* ADMIN BUTTON */
         .admin-btn {
             display: inline-block;
             margin-top: 12px;
-            padding: 8px 22px;
+            padding: 8px 20px;
             background: linear-gradient(135deg, #00c853, #2e7d32);
             color: #ffffff;
             border-radius: 22px;
@@ -153,20 +170,22 @@
             justify-content: center;
             align-items: center;
             z-index: 999;
+            padding: 20px;
         }
 
         .thank-box {
+            width: 100%;
+            max-width: 320px;
             background: linear-gradient(135deg, #ff416c, #ff4b2b);
-            padding: 30px 45px;
-            border-radius: 28px;
+            padding: 26px;
+            border-radius: 26px;
             text-align: center;
             animation: popup 0.4s ease, glow 2s infinite alternate;
         }
 
         .thank-box h2 {
             color: #ffffff;
-            font-size: 26px;
-            font-weight: bold;
+            font-size: 22px;
         }
 
         @keyframes popup {
@@ -178,6 +197,11 @@
             0% { box-shadow: 0 0 20px rgba(255,75,43,0.6); }
             50% { box-shadow: 0 0 35px rgba(255,75,43,0.8); }
             100% { box-shadow: 0 0 20px rgba(255,75,43,0.6); }
+        }
+
+        @media (max-width: 480px) {
+            h1 { font-size: 22px; }
+            p { font-size: 14px; }
         }
     </style>
 </head>
@@ -192,12 +216,15 @@
         Your small contribution makes a big difference.
     </p>
 
-    <input type="text" id="userName" placeholder="Enter your name">
-    <input type="number" id="amount" placeholder="Enter donation amount (₹)">
+    <!-- CENTERED INPUTS -->
+    <div class="input-group">
+        <input type="text" id="userName" placeholder="Enter your name">
+        <input type="number" id="amount" placeholder="Enter donation amount (₹)">
+    </div>
 
-    <button onclick="startPayment()"> Pay Now</button>
+    <button onclick="startPayment()">Pay Now</button>
 
-    <div class="amount-box" onclick="goToLove()"> About Us 💖</div>
+    <div class="amount-box" onclick="goToLove()">About Us 💖</div>
 
     <footer>
         Thank you for your kindness 🌸
@@ -218,10 +245,8 @@
 
 <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
 
-
 <script>
     function startPayment() {
-
         const name = document.getElementById("userName").value.trim();
         const amount = document.getElementById("amount").value.trim();
 
@@ -233,16 +258,13 @@
         fetch("/create-order", {
             method: "POST",
             headers: { "Content-Type": "application/json" },
-            body: JSON.stringify({
-                userName: name,
-                amount: amount
-            })
+            body: JSON.stringify({ userName: name, amount: amount })
         })
         .then(res => res.json())
         .then(data => {
 
             var options = {
-                key: "rzp_test_RtR6TqgMazIdkg",   // 🔑 KEY ID HERE
+                key: "rzp_test_RtR6TqgMazIdkg",
                 amount: data.amount * 100,
                 currency: "INR",
                 order_id: data.orderId,
@@ -250,7 +272,6 @@
                 description: "Donation by " + name,
 
                 handler: function (response) {
-
                     fetch("/payment-success", {
                         method: "POST",
                         headers: { "Content-Type": "application/json" },
@@ -271,7 +292,6 @@
             var rzp = new Razorpay(options);
 
             rzp.on('payment.failed', function (response) {
-
                 fetch("/payment-failed", {
                     method: "POST",
                     headers: { "Content-Type": "application/json" },
@@ -280,7 +300,6 @@
                         status: "FAILED"
                     })
                 });
-
                 alert("Payment Failed ❌");
             });
 
